--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <!-- Basic SEO Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
-  
+<meta name="google-site-verification" content="v-JCzZe3zFWHcjtfT_a_PxZVfMIVJO5_NTHOhiptov8" /> 
+<meta name="naver-site-verification" content="0322267bb114f7a36d8e27fa6b72e13114d2d9db" />  
   
   
   <title>이사 고수들만 몰래 공유하던 업체 비교 사이트 리스트 전격 공개</title>
@@ -406,3 +406,4 @@
 
 </body>
 </html>
+
